# 86Box

src/: 86box.h  Makefile.local  keyboard.c  pc.c  plat_dynld.h  plat_midi.h  ui.h
src/cpu/: x87_ops.h
src/network/: net_pcap.c
src/platform/qt/: CMakeLists.txt  main.cpp  qt_disk.cpp  qt_gameport.cpp  qt_midi.cpp  qt_system.cpp  qt_thread.cpp  qt_ui.cpp
src/platform/win/: 86Box.rc  Makefile.mingw  pcap_if.rc  win.c  win_about.c  win_cdrom.c  win_crashdump.c  win_d3d.cpp  win_ddraw.cpp  win_devconf.c  win_dialog.c  win_dynld.c  win_joystick.cpp  win_jsconf.c  win_keyboard.c  win_midi.c  win_mouse.cpp  win_new_floppy.c  win_opendir.c  win_serial.c  win_settings.c  win_snd_gain.c  win_stbar.c  win_thread.c  win_ui.c
